--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,6 @@ body {
   font-family: "Sansation", sans-serif;
 }
 
+.button-gradient {
+  background-image: linear-gradient(to bottom, #BAA716, #B50D34);
+}
