--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,10 @@ body {
   font-family: "Sansation", sans-serif;
 }
 
-.button-gradient {
-  background-image: linear-gradient(to bottom, #BAA716, #B50D34);
+.theme-gradient {
+  background-image: linear-gradient(to bottom,#B50D34 , #BAA716);
+}
+
+.black-gradient {
+  background-image: linear-gradient(to bottom,#62626280 , #2D2C2C80);
 }
