--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,11 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-    to bottom,
-    transparent,
-    rgb(var(--background-end-rgb))
-  ) rgb(var(--background-start-rgb));
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -52,10 +53,9 @@ body {
 }
 
 .theme-gradient {
-  background-image: linear-gradient(to bottom,#B50D34 , #BAA716);
+  background-image: linear-gradient(to bottom, #b50d34, #baa716);
 }
 
 .black-gradient {
-  background-image: linear-gradient(to bottom,#62626280 , #2D2C2C80);
+  background-image: linear-gradient(to bottom, #62626280, #2d2c2c80);
 }
-
