--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: black;
+  color: white;
 }
 
 @layer utilities {
@@ -49,7 +44,7 @@ body {
 }
 
 body {
-  font-family: "Sansation", sans-serif;
+  font-family: "Sansation", sans-serif !important;
 }
 
 .theme-gradient {
@@ -58,4 +53,46 @@ body {
 
 .black-gradient {
   background-image: linear-gradient(to bottom, #62626280, #2d2c2c80);
+}
+
+/* Scrollbar container */
+::-webkit-scrollbar {
+  width: 12px; /* Width of the vertical scrollbar */
+  height: 12px; /* Height of the horizontal scrollbar */
+}
+
+/* Scrollbar track (background) */
+::-webkit-scrollbar-track {
+  background: #1f2937; /* Dark gray background */
+  border-radius: 10px; /* Rounded corners */
+}
+
+/* Scrollbar handle (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: #f97316; /* Orange handle */
+  border-radius: 10px; /* Rounded corners */
+  border: 3px solid #1f2937; /* Adds padding around the thumb */
+}
+
+/* Scrollbar handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #fb923c; /* Lighter orange on hover */
+}
+
+/* Scrollbar corner (for both scrollbars) */
+::-webkit-scrollbar-corner {
+  background-color: #1f2937; /* Dark gray corner */
+}
+input[type="radio"] {
+  accent-color: #B85F24;
+}
+
+* {
+  font-family: "Sansation", sans-serif !important;
+}
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
