--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,5 +142,29 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 
+/* Shimmer Css */
 
+.shimmer {
+  @apply relative bg-[#3a3a3a];
+  background-image: linear-gradient(
+    to right,
+    #3a3a3a 0%,
+    #3f3f3f 10%,
+    #4a4a4a 20%,
+    #3f3f3f 30%,
+    #3a3a3a 50%,
+    #3a3a3a 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 800px 200px;
+  animation: shimmer 1.5s ease-in-out infinite;
+}
 
+@keyframes shimmer {
+  0% {
+    background-position: -400px 0;
+  }
+  100% {
+    background-position: 400px 0;
+  }
+}
