feat(pt-122):enhance responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,11 +142,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   @apply 4xl:h-8 4xl:text-3xl;
 }
 
- .dashcode-app-calendar .fc-daygrid-day-top{
-  @apply 4xl:h-8 4xl:text-3xl
-
-} 
-
+.dashcode-app-calendar .fc-daygrid-day-top {
+  @apply 4xl:h-8 4xl:text-3xl;
+}
 
 /* Shimmer Css */
 
@@ -232,6 +230,6 @@ li.country.highlight {
   background-color: unset !important; /* Remove existing background */
 }
 
-.fc-daygrid-day-bottom{
+.fc-daygrid-day-bottom {
   text-align: center !important;
 }
